compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__invalid_bit_array_pattern_name.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: let assert <<bitValue>> = <<73>>
---
error: Invalid name
  ┌─ /src/one/two.gleam:1:14
  │
1 │ let assert <<bitValue>> = <<73>>
  │              ^^^^^^^^ This is not a valid name

Hint: Names start with a lowercase letter and contain a-z, 0-9, or _.
Try: bit_value
